--- a/index.html
+++ b/index.html
@@ -18,12 +18,25 @@
             box-sizing: border-box;
         }
 
-        body {
-            font-family: 'Press Start 2P', cursive;
-            background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%);
-            color: #fff;
-            overflow-x: hidden;
-        }
+body {
+    font-family: 'Press Start 2P', cursive;
+    background: url('./public/images/fondo2.jpg') center center / cover no-repeat fixed;
+    color: #fff;
+    overflow-x: hidden;
+    position: relative;
+}
+
+/* ✅ OPCIONAL: Overlay oscuro para mejor legibilidad */
+body::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Overlay semi-transparente */
+    z-index: -1;
+}
 
         .header {
             background: rgba(0, 0, 0, 0.8);
@@ -415,7 +428,7 @@
 </head>
 <body>
 <div class="header">
-    <img src="./public/images/Street_Fighter_Banner.webp" 
+    <img src="./public/images/banner123.jpg" 
          alt="Street Fighter Betting Arena" 
          class="header-banner">
 </div>
